Fix left and right alignment of browsers list

--- a/src/components/BrowserStats.css
+++ b/src/components/BrowserStats.css
@@ -4,7 +4,7 @@
 }
 
 .browser-list {
-    margin: 0;
+    margin: 0 -0.8rem;
     padding: 0;
     display: flex;
     flex-flow: row wrap;
